Support testing pipelines that use inferred schemas